# dere

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BinarySearchTreeChallenge.sln  BinarySearchTreeTest.vcxproj  BinarySearchTreeTest.vcxproj.filters  BinaryTree.hpp  CMakeLists.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  readme.md
BinarySearchTreeTest.dir/Debug/: BinarySearchTreeTest.exe.recipe  BinarySearchTreeTest.ilk
BinarySearchTreeTest.dir/Debug/BinarySe.4B22F080.tlog/: BinarySearchTreeTest.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
inc/: BinaryTree.hpp
src/: BinaryTreeTest.cpp
